# RawElectron

./: .gitignore  CMakeLists.txt  README.md  build.py  clean.py  package.py  requirements-build.txt  run.py
app/: .gitignore  package-lock.json  package.json
app/native/: README.md  binding.gyp  opencv.gypi
app/native/src/: addon.cpp
app/scripts/: build-native.cjs  build-opencv.cjs  write-opencv-gypi.cjs
app/src/: index.css  renderer.tsx
app/src/engine/: nativeAddon.ts
app/src/native-engine/: addon.cpp
app/src/shared/: engineTypes.ts
apps/electron/: forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json
apps/electron/native/: README.md  binding.gyp  opencv.gypi
apps/electron/scripts/: build-avif.cmd  build-native.cjs  build-opencv.cjs  packager-unzip-fallback.cjs  run-forge.cjs  test-adjustment-pipeline.cjs  test-engine-handle.cjs  test-engine-worker.cjs  test-export-formats.cjs  test-preview-file.cjs  test-preview-port-electron.cjs  test-preview-port-preload.cjs  test-preview-preload-electron.cjs  test-preview-preload-worker.cjs  test-shared-bitmap.cjs  write-opencv-gypi.cjs
apps/electron/src/: i18n.ts  index.css  main.ts  preload.ts  renderer.tsx
apps/electron/src/engine/: engineHost.ts  engineWorker.ts  nativeAddon.ts
apps/electron/src/native-engine/: addon.cpp
apps/electron/src/shared/: appSettings.ts  engineTypes.ts  presetXmp.ts
doc/00_Project/: Project_Overview.md
doc/01_Requirements/: Functional_Requirements.md  NonFunctional_Requirements.md  Software_Requirements_Specification.md  Use_Cases.md
doc/02_Architecture/: Engine_Architecture.md  Rendering_Architecture.md  System_Architecture.md
doc/03_Design/: Data_Model.md  Domain_Model.md  Image_Processing_Pipeline.md  UI_Design.md
doc/04_Interface/: Engine_API.md  IPC_API.md  Project_File_Format.md
doc/05_Test/: Acceptance_Test.md  Performance_Test.md
docs/00_Project/: Documentation_Audit.md  Project_Overview.md
docs/02_Architecture/: IPC_Architecture.md  Rendering_Architecture.md  System_Architecture.md
docs/03_Design/: Data_Model.md
docs/04_Interface/: Engine_API.md  IPC_API.md
docs/05_Test/: Test_Plan.md  macOS_Build_Verification.md
engine/: CMakeLists.txt
engine/Codec/: codec.cpp  codec.hpp
engine/Codec/include/rawelectron/codec/: codec.hpp
engine/Codec/src/: module_anchor.cpp
engine/Engine/: engine_api.cpp  engine_api.hpp
engine/Engine/include/rawelectron/engine/: engine_api.hpp
engine/Engine/src/: module_anchor.cpp
engine/IPC/: engine_bridge.cpp  engine_bridge.hpp
engine/IPC/include/rawelectron/ipc/: engine_bridge.hpp
engine/IPC/src/: module_anchor.cpp
engine/ImageCore/: types.hpp
engine/ImageCore/include/rawelectron/image_core/: types.hpp
engine/ImageCore/src/: module_anchor.cpp
engine/Interfaces/: engine_services.hpp  image_pipeline.hpp  image_services.hpp
engine/Interfaces/include/rawelectron/interfaces/: image_services.hpp
engine/Processing/: pipeline.cpp  pipeline.hpp  processor.cpp  processor.hpp
engine/Processing/include/rawelectron/processing/: processor.hpp
engine/Processing/src/: module_anchor.cpp
engine/Renderer/: renderer.cpp  renderer.hpp
engine/Renderer/include/rawelectron/renderer/: renderer.hpp
engine/Renderer/src/: module_anchor.cpp
lib.third/opencv/install/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_imgcodecs4100.lib
test/: CMakeLists.txt  interface_contracts.cpp  processing_behavior.cpp
